@@ -103,6 +103,12 @@ The package can be built using the direct variant with:
 rather than:
    ./configure
 prior to the 'make' call.
+In sg3_utils version 1.31 runtime selection of the direct or indirect
+interface was added with the scsi_pt_win32_direct(int state_direct)
+function declared in sg_pt.h. The default is indirect unless
+'./configure --enable-win32-spt-direct' was used in the build. If
+'state_direct' is 1 then the direct interface is used and if it is 0
+the indirect interface is used.
 
 Details
 =======
@@ -197,4 +203,4 @@ mode" with the setmode() Windows command.
 
 
 Doug Gilbert
-5th December 2010
+6th February 2011
