@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2009-2010 Douglas Gilbert.
+ * Copyright (c) 2009-2011 Douglas Gilbert.
  * All rights reserved.
  * Use of this source code is governed by a BSD-style
  * license that can be found in the BSD_LICENSE file.
@@ -14,7 +14,7 @@
 #endif
 
 
-static const char * scsi_pt_version_str = "2.06 20100812";
+static const char * scsi_pt_version_str = "2.07 20110206";
 
 const char *
 scsi_pt_version()
